--- a/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -5,17 +5,30 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" prefHeight="358.0" prefWidth="436.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
+<VBox alignment="TOP_CENTER" prefHeight="358.0" prefWidth="436.0" spacing="20.0" style="-fx-background-color: #2C3E50;" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:" />
-   <TextField fx:id="textFieldUsuario" prefHeight="24.0" prefWidth="197.0" />
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-   <PasswordField fx:id="textFieldPassword" />
-    <Button alignment="TOP_CENTER" onAction="#onLoginButtonClick" prefHeight="26.0" prefWidth="163.0" text="Aceptar" textAlignment="CENTER" />
-   <Text fx:id="textFieldMensaje" strokeType="OUTSIDE" strokeWidth="0.0" text="Soy el texto inical" />
-   <Button fx:id="openRegistrarButton" mnemonicParsing="false" onAction="#openRegistrarClick" text="Open Registrar" />
+   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:">
+      <font>
+         <Font size="14.0" />
+      </font></Text>
+   <TextField fx:id="textFieldUsuario" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" text="aliufsaiuhsf" />
+   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+      <font>
+         <Font size="14.0" />
+      </font></Text>
+   <PasswordField fx:id="textFieldPassword" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" />
+    <Button fx:id="aceptarButton" alignment="TOP_CENTER" onAction="#onLoginButtonClick" onMouseClicked="#buttonAceptarClick" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Aceptar" textAlignment="CENTER">
+      <font>
+         <Font size="14.0" />
+      </font></Button>
+   <Text fx:id="textFieldMensaje" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="No tienes cuenta?">
+      <font>
+         <Font size="18.0" />
+      </font></Text>
+   <Button fx:id="openRegistrarButton" mnemonicParsing="false" onAction="#openRegistrarClick" onMouseClicked="#buttonOpenRegistrarClick" prefHeight="26.0" prefWidth="149.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Open Registrar" />
 </VBox>
