--- a/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
@@ -23,7 +22,7 @@
          <Font size="14.0" />
       </font></Text>
    <PasswordField fx:id="textFieldPassword" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" />
-    <Button fx:id="aceptarButton" alignment="TOP_CENTER" onAction="#onLoginButtonClick" onMouseClicked="#buttonAceptarClick" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Aceptar" textAlignment="CENTER">
+    <Button fx:id="aceptarButton" alignment="TOP_CENTER" onAction="#onLoginButtonClick" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Aceptar" textAlignment="CENTER">
       <font>
          <Font size="14.0" />
       </font></Button>
@@ -31,9 +30,5 @@
       <font>
          <Font size="18.0" />
       </font></Text>
-   <Button fx:id="openRegistrarButton" mnemonicParsing="false" onAction="#openRegistrarClick" onMouseClicked="#buttonOpenRegistrarClick" prefHeight="26.0" prefWidth="149.0" style="-fx-background-color: #3498DB;" text="Open Registrar">
-      <stylesheets>
-         <URL value="@../../../Css/buttonLoginAceptar.css" />
-         <URL value="@../../../Css/buttonLoginAceptar.css" />
-      </stylesheets></Button>
+   <Button fx:id="openRegistrarButton" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="26.0" prefWidth="149.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Registrarte" />
 </VBox>
