--- a/primera-app-fx/src/main/resources/Css/buttonLoginAceptar.css
+++ b/primera-app-fx/src/main/resources/Css/buttonLoginAceptar.css
@@ -93,6 +93,36 @@
     -fx-effect: dropshadow(gaussian, rgba(255, 0, 0, 0.5), 8, 0, 0, 2);
 }
 
+/* Estilo base del botón */
+#buttonRecuperarContraseña {
+    -fx-background-color: transparent; /* Fondo transparente */
+    -fx-border-color: #3498DB; /* Borde azul brillante */
+    -fx-border-width: 2px;
+    -fx-text-fill: #3498DB; /* Texto azul */
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-padding: 6px 12px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-cursor: hand; /* Cursor de mano */
+    -fx-transition: 0.3s;
+}
+
+/* Efecto al pasar el mouse */
+#buttonRecuperarContraseña:hover {
+    -fx-background-color: #3498DB; /* Azul brillante */
+    -fx-text-fill: white; /* Texto blanco */
+    -fx-scale-x: 1.05;
+    -fx-scale-y: 1.05;
+}
+
+/* Efecto al hacer clic */
+#buttonRecuperarContraseña:pressed {
+    -fx-background-color: #1E76B8; /* Azul más oscuro */
+    -fx-border-color: #1E76B8;
+    -fx-scale-x: 1;
+    -fx-scale-y: 1;
+}
 
 /** PESTAÑA DE REGISTRO ---------------
 
@@ -191,7 +221,6 @@
     -fx-background-color: #D4AC0D;
 }
 
-/* Efecto de "presionado" */
 #aniadir:pressed {
     -fx-background-color: #B7950B;
     -fx-border-color: #7D6608;
