--- a/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -8,10 +8,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" prefHeight="358.0" prefWidth="436.0" spacing="20.0" style="-fx-background-color: #2C3E50;" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="346.0" spacing="20.0" style="-fx-background-color: #2C3E50;" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <Button fx:id="openRegistrarButton" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="36.0" prefWidth="98.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Registrarte" translateX="100.0" />
    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:">
       <font>
          <Font size="14.0" />
@@ -22,13 +23,13 @@
          <Font size="14.0" />
       </font></Text>
    <PasswordField fx:id="textFieldPassword" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" />
-    <Button fx:id="aceptarButton" alignment="TOP_CENTER" onAction="#onLoginButtonClick" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Aceptar" textAlignment="CENTER">
+    <Button fx:id="aceptarButton" alignment="TOP_CENTER" onAction="#onLoginButtonClick" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Aceptar" textAlignment="CENTER">
       <font>
          <Font size="14.0" />
       </font></Button>
-   <Text fx:id="textFieldMensaje" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="No tienes cuenta?">
+   <Text fx:id="textFieldMensaje" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0">
       <font>
          <Font size="18.0" />
       </font></Text>
-   <Button fx:id="openRegistrarButton" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="26.0" prefWidth="149.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Registrarte" />
+   <Button fx:id="buttonRecuperarContraseña" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#buttonRecuperarContraseñaClick" prefHeight="33.0" prefWidth="160.0" text="Recuperar contraseña" />
 </VBox>
