Se termina el ejercicio

--- a/primera-app-fx/src/main/resources/es/ies/puerto/RecuperarCuenta.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/RecuperarCuenta.fxml
@@ -7,17 +7,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="321.0" prefWidth="245.0" spacing="15.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.RecuperarCuentaController">
+<VBox alignment="CENTER" prefHeight="336.0" prefWidth="245.0" spacing="15.0" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.RecuperarCuentaController">
     <children>
         <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Restablecer Contraseña" />
         
-        <!-- Campo de usuario -->
         <TextField fx:id="campoUsuario" maxWidth="-Infinity" promptText="Usuario" />
         
         <PasswordField fx:id="nuevaContrasenia" maxWidth="-Infinity" promptText="Nueva Contraseña" />
         <PasswordField fx:id="confirmarContrasenia" maxWidth="-Infinity" promptText="Confirmar Contraseña" />
         
-        <!-- Mensaje de confirmación -->
         <Text fx:id="mensajeCambio" style="-fx-fill: green;" text="" visible="false" />
         
         <Button fx:id="buttonCambiarContrasenia" onAction="#clickButtonCambiar" text="Cambiar Contraseña" />
