--- a/primera-app-fx/src/main/resources/es/ies/puerto/recuperarContrasenia.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/recuperarContrasenia.fxml
@@ -7,21 +7,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="333.0" prefWidth="368.0" spacing="15.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.RecuperarContraseniaController">
+<VBox alignment="CENTER" prefHeight="333.0" prefWidth="368.0" spacing="15.0" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.RecuperarContraseniaController">
     <children>
         <Label prefHeight="23.0" prefWidth="176.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Recuperar Contraseña" />
-        <Text text="Ingrese su correo:" />
+        <Text fill="WHITE" text="Ingrese su correo:" />
         <TextField fx:id="textoCorreo" maxWidth="-Infinity" promptText="Correo electrónico" />
 
         <Button fx:id="buttonRecuperar" onAction="#clickButtonRecuperar" text="Recuperar" />
         
-        <!-- Mensaje de éxito o error -->
         <Text fx:id="textoErrorContraseña" style="-fx-fill: red;" visible="false" />
 
-        <!-- ✔️ Confirmación de correo recibido -->
-        <Text fx:id="tickConfirmacion" style="-fx-fill: green; -fx-font-size: 18px;" text="✔️ Correo enviado" translateY="-14.0" visible="false" />
++        <Text fx:id="tickConfirmacion" style="-fx-fill: green; -fx-font-size: 18px;" text="✔️ Correo enviado" translateY="-14.0" visible="false" />
 
-        <!-- Indicador de carga (opcional) -->
         <ProgressIndicator fx:id="loadingIndicator" translateY="-41.0" visible="false" />
         <Button fx:id="buttonVolver" onAction="#clickButtonVolver" text="Volver" translateY="-39.0" />
         <Text fx:id="tickConfirmacion" style="-fx-fill: green; -fx-font-size: 18px;" text="✔️ Correo enviado correctamente" visible="false" />
