Se añade al proyecto la refactorizacion de los idiomas en todas las pantallas

--- a/primera-app-fx/src/main/resources/Css/buttonLoginAceptar.css
+++ b/primera-app-fx/src/main/resources/Css/buttonLoginAceptar.css
@@ -70,7 +70,7 @@
     -fx-background-color: #AAB7B8;
 }
 
-/* ========================== BOTÓN DE "RECUPERAR CONTRASEÑA ========================== */
+/* ========================== BOTÓN DE RECUPERAR CONTRASEÑA ========================== */
 #buttonRecuperarContraseña {
     -fx-background-color: transparent;
     -fx-border-color: #3498DB;
