--- a/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -2,23 +2,30 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="346.0" spacing="20.0" style="-fx-background-color: #2C3E50;" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
+<VBox alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="346.0" spacing="20.0" style="-fx-background-color: #2C3E50;" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Button fx:id="openRegistrarButton" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="36.0" prefWidth="98.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Registrarte" translateX="100.0" />
-   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:">
+   <TilePane alignment="CENTER">
+      <children>
+         <ComboBox fx:id="comboIdioma" onAction="#cambiarIdioma" prefWidth="150.0" promptText="Idioma" />
+         <Button fx:id="openRegistrarButton" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="36.0" prefWidth="98.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Registrarte" translateX="32.0" />
+      </children>
+   </TilePane>
+   <Text fx:id="textUsuario" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:">
       <font>
          <Font size="14.0" />
       </font></Text>
    <TextField fx:id="textFieldUsuario" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" />
-   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+   <Text fx:id="textContrasenia" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
       <font>
          <Font size="14.0" />
       </font></Text>
@@ -31,5 +38,5 @@
       <font>
          <Font size="18.0" />
       </font></Text>
-      <Button fx:id="buttonRecuperarContraseña" text="¿Olvidaste tu contraseña?" onAction="#buttonRecuperarContraseñaClick" />
+      <Button fx:id="buttonRecuperarContraseña" onAction="#buttonRecuperarContraseñaClick" text="¿Olvidaste tu contraseña?" />
 </VBox>
