--- a/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/primera-app-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -10,33 +10,77 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="346.0" spacing="20.0" style="-fx-background-color: #2C3E50;" stylesheets="@../../../Css/buttonLoginAceptar.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.LoginController">
+<!-- Contenedor principal -->
+<VBox alignment="TOP_CENTER" prefHeight="533.0" prefWidth="346.0" spacing="20.0"
+      style="-fx-background-color: #2C3E50;"
+      stylesheets="@../../../css/style.css"
+      xmlns="http://javafx.com/javafx/23.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="es.ies.puerto.controller.LoginController">
+
+    <!-- Margen interior del VBox -->
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <TilePane alignment="CENTER">
-      <children>
-         <ComboBox fx:id="comboIdioma" onAction="#cambiarIdioma" prefWidth="150.0" promptText="Idioma" />
-         <Button fx:id="openRegistrarButton" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="36.0" prefWidth="98.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Registrarte" translateX="32.0" />
-      </children>
-   </TilePane>
-   <Text fx:id="textUsuario" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:">
-      <font>
-         <Font size="14.0" />
-      </font></Text>
-   <TextField fx:id="textFieldUsuario" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" />
-   <Text fx:id="textContrasenia" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
-      <font>
-         <Font size="14.0" />
-      </font></Text>
-   <PasswordField fx:id="textFieldPassword" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="210.0" />
-    <Button fx:id="aceptarButton" alignment="TOP_CENTER" onAction="#onLoginButtonClick" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #3498DB;" stylesheets="@../../../Css/buttonLoginAceptar.css" text="Aceptar" textAlignment="CENTER">
-      <font>
-         <Font size="14.0" />
-      </font></Button>
-   <Text fx:id="textFieldMensaje" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0">
-      <font>
-         <Font size="18.0" />
-      </font></Text>
-      <Button fx:id="buttonRecuperarContraseña" onAction="#buttonRecuperarContraseñaClick" text="¿Olvidaste tu contraseña?" />
+
+    <!-- Parte superior: Selección de idioma y botón para ir a registro -->
+    <TilePane alignment="CENTER">
+        <children>
+            <!-- ComboBox para seleccionar idioma -->
+            <ComboBox fx:id="comboIdioma" onAction="#cambiarIdioma" prefWidth="150.0" promptText="Idioma" />
+
+            <!-- Botón para cambiar a la pantalla de registro -->
+            <Button fx:id="openRegistrarButton"
+                    prefHeight="36.0" prefWidth="98.0"
+                    style="-fx-background-color: #3498DB;"
+                    onAction="#openRegistrarClick"
+                    text="Registrarte"
+                    translateX="32.0" />
+        </children>
+    </TilePane>
+
+    <!-- Sección de Login: Usuario y contraseña -->
+    
+    <!-- Texto Usuario -->
+    <Text fx:id="textUsuario" fill="WHITE" text="Usuario:">
+        <font>
+            <Font size="14.0" />
+        </font>
+    </Text>
+
+    <!-- Campo de texto para ingresar el nombre de usuario -->
+    <TextField fx:id="textFieldUsuario" prefHeight="26.0" prefWidth="210.0" />
+
+    <!-- Texto Contraseña -->
+    <Text fx:id="textContrasenia" fill="WHITE" text="Password:">
+        <font>
+            <Font size="14.0" />
+        </font>
+    </Text>
+
+    <!-- Campo de contraseña -->
+    <PasswordField fx:id="textFieldPassword" prefHeight="26.0" prefWidth="210.0" />
+
+    <!-- Botón para iniciar sesión -->
+    <Button fx:id="aceptarButton"
+            onAction="#onLoginButtonClick"
+            prefHeight="36.0" prefWidth="160.0"
+            style="-fx-background-color: #3498DB;"
+            text="Aceptar">
+        <font>
+            <Font size="14.0" />
+        </font>
+    </Button>
+
+    <!-- Mensaje de validación -->
+    <Text fx:id="textFieldMensaje" fill="WHITE">
+        <font>
+            <Font size="18.0" />
+        </font>
+    </Text>
+
+    <!-- Boton para recuperar contraseña -->
+    <Button fx:id="buttonRecuperarContrasenia"
+            onAction="#buttonRecuperarContraseniaClick"
+            text="¿Olvidaste tu contraseña?" />
 </VBox>
